# moqui_dcm_save

./: .clang-tidy  .dual-system  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  compile_commands.json  example_2d_dose_input.txt  suggestions.md
.github/: labels.yml
.github/claude/: CLAUDE.md  README.md
.github/claude/commands/: add-feature.md  architecture-evolution.md  cross-project-sync.md  dependency-audit.md  fix-issue.md  generate-tests.md  intelligent-testing.md  knowledge-transfer.md  optimize-performance.md  refactor-code.md  security-audit.md  serena-autofix.md  serena-optimize.md  workspace-analysis.md
.github/claude/contexts/: cpp-template.md  moqui-domain.md  python-template.md  shared-workflows.md
.github/claude/docs/: AI_ASSISTED_DEVELOPMENT_README.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE_INVARIANTS.md  MODULE_INTERFACES.md  README.md
.github/claude/prompts/: _cpp_guidelines.md  _javascript_guidelines.md  _language_template.md  _python_guidelines.md  base_prompt.md  bug_fix.md  code_review.md  cpp_fix.md  go_fix.md  issue_resolution.md  javascript_fix.md  multi_language_analysis.md  python_fix.md  rust_fix.md  scrivener.md
.serena/: USAGE_GUIDE.md  config.yml  project.yml
.serena/memories/: 2D_Dose_DICOM_Implementation_Summary.md  detection-script-fix.md  dicom_scaling_fix.md  project_overview.md
.serenena/memories/moqui-domain-knowledge/: project-overview.md
.serenena/memories/template-system-knowledge/: system-overview.md
data/Output/spotplan/: 1S070_2_Dose.dcm  1S070_2_Dose.raw
docs/: 01_2d_dose_documentation.md  01_plan_2d_dose.md  04_dcm_output_documentation.md  04_plan_dcm_output.md  dev_plan_01.md  phase0-implementation-summary.md
hooks/: pre-push
include/moqui_dcm_save/: library.hpp
moqui/: CMakeLists.txt
moqui/.cache/clangd/index/: library.cpp.57B4C1BDCFBC8BB9.idx  library.hpp.8C8E3488293F86E3.idx  main.cpp.70C7603C4D8A9511.idx  test_example.cpp.B73413A665BDB956.idx
moqui/base/: mqi_aperture.hpp  mqi_aperture3d.hpp  mqi_beam_module.hpp  mqi_beam_module_ion.hpp  mqi_beam_module_rt.hpp  mqi_beamlet.hpp  mqi_beamline.hpp  mqi_beamsource.hpp  mqi_cli.hpp  mqi_common.hpp  mqi_coordinate_transform.hpp  mqi_ct.hpp  mqi_dataset.hpp  mqi_error_check.hpp  mqi_file_handler.hpp  mqi_fippel_physics.hpp  mqi_geometry.hpp  mqi_grid3d.hpp  mqi_hash_table.hpp  mqi_interaction.hpp  mqi_io.hpp  mqi_math.hpp  mqi_matrix.hpp  mqi_node.hpp  mqi_p_ionization.hpp  mqi_physics_constants.hpp  mqi_physics_list.hpp  mqi_po_elastic.hpp  mqi_po_inelastic.hpp  mqi_pp_elastic.hpp  mqi_rangeshifter.hpp  mqi_rect3d.hpp  mqi_relativistic_quantities.hpp  mqi_roi.hpp  mqi_scorer.hpp  mqi_sparse_io.hpp  mqi_threads.hpp  mqi_track.hpp  mqi_track_stack.hpp  mqi_treatment_machine.hpp  (+6 more)
moqui/base/distributions/: mqi_const_1d.hpp  mqi_norm_1d.hpp  mqi_pdfMd.hpp  mqi_phsp6d.hpp  mqi_phsp6d_fanbeam.hpp  mqi_phsp6d_ray.hpp  mqi_phsp6d_uniform.hpp  mqi_uni_1d.hpp
moqui/base/environments/: mqi_phantom_env.hpp  mqi_tps_env.hpp  mqi_xenvironment.hpp
moqui/base/materials/: material_table_data.hpp  mqi_material.hpp  mqi_material_ct.hpp  mqi_patient_materials.hpp
moqui/base/scorers/: mqi_scorer_energy_deposit.hpp
moqui/include/moqui_dcm_save/: library.hpp
moqui/kernel_functions/: mqi_download_data.hpp  mqi_kernel_functions.hpp  mqi_print_data.hpp  mqi_transport.hpp  mqi_upload_data.hpp  mqi_variables.hpp
moqui/src/: main.cpp
moqui/tests/: CMakeLists.txt
moqui/treatment_machines/: mqi_treatment_machine_smc_gtr1.hpp  mqi_treatment_machine_smc_gtr2.hpp  spline_interp.hpp
scripts/: detect-project-type.sh  validate-template.sh
src/: library.cpp  main.cpp
tests/: CMakeLists.txt  test_dicom_output.cpp  test_example.cpp
tps_env/: CMakeLists.txt  moqui_tps.in  tps_env.cpp
